# vpn-channel-manager

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  VPN通道管理器-落地方案.md  docker-compose.yml  start.sh
app/: adapters.py  adapters.yaml  dockerhub.py  main.py  manager.py  preflight.py  registry.py  requirements.txt  ruleutil.py  store.py
app/static/: channel.html  clash-config.html  containers.html  env-check.html  index.html  monitor.html  new-channel.html  routing-table.html
desktop/app/: .gitignore  Cargo.toml  build-dmg.sh  stage-helper.sh  stage-images.sh  stage-runtime.sh  tauri.conf.json
desktop/app/capabilities/: main.json
desktop/app/icons/: icon.icns
desktop/app/src/: main.rs
desktop/core/: .gitignore  Cargo.toml
desktop/core/examples/: seed_demo.rs
desktop/core/src/: adapters.rs  api.rs  app.rs  config.rs  containers.rs  diag.rs  docker.rs  dockerhub.rs  entry.rs  health.rs  infra.rs  lib.rs  main.rs  manager.rs  mihomo.rs  preflight.rs  registry.rs  routes.rs  server.rs  store.rs  vm.rs  webutil.rs
desktop/core/tests/: smoke.rs
desktop/helper/: Cargo.toml
docs/: design.md  development.md  test-plan-routing-table.md
images/byo/: Dockerfile  (+1 more)
mihomo/: config.template.yaml
spike/: Cargo.toml  SPIKE-RESULTS.md
tests/: conftest.py  smoke.sh  test_adapters.py  test_api.py  test_dockerhub.py  test_golden.py  test_manager.py  test_mirrors.py  test_preflight.py  test_registry.py  test_store.py  test_validation.py
vpn-manager/: README.md  docker-compose.yml  gen_env.py  start.sh
(+46 files in other folders)
