[package]
name = "vpnmgr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
bollard = "=0.17.1"
fernet = "=0.2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "=1.11.1"
tar = "=0.4.46"
futures-util = "0.3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
